# itazuraneko-shousetsu-backup

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
benches/: sample.html  sample_csv.csv  serialize_data.rs
src/: main.rs  scraper.rs
